--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,8 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-# Images directory
+# Source Images directory
 images
+
+# Optimized Images files
+optimized_images/*.*
