--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Command Line Tool to optimize images",
   "main": "index.js",
   "scripts": {
-    "start": "index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/juancancela/minim",
   "dependencies": {
-    "imagemin": "^5.2.2"
+    "imagemin": "^5.2.2",
+    "imagemin-mozjpeg": "^6.0.0",
+    "imagemin-pngquant": "^5.0.0"
   }
 }
